fix doc validation and update readme