@@ -3,38 +3,50 @@ package com.org.flygo.util;
 import com.org.flygo.exception.InvalidFileException;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 
 public final class FileValidator {
 
     // Max file sizes (in bytes)
     private static final long MAX_IMAGE_SIZE = 2 * 1024 * 1024;        // 2MB
     private static final long MAX_DOCUMENT_SIZE = 5 * 1024 * 1024;     // 5MB
-    private static final long MAX_VIDEO_SIZE = 20 * 1024 * 1024;       // 20MB
 
-
-    // Allowed MIME types
-    private static final List<String> ALLOWED_IMAGE_TYPES = Arrays.asList(
-            "image/jpeg", "image/png", "application/pdf", "image/JPEG", "image/PNG"
+    private static final List<String> ALLOWED_IMAGE_TYPES = List.of(
+            "image/jpeg", "image/png"
     );
 
-    public static void validateDocumentFile(MultipartFile file) throws IOException {
+    private static final List<String> ALLOWED_DOCUMENT_TYPES = List.of(
+            "application/pdf"
+    );
+
+    // Maps each allowed content type to its max size
+    private static final Map<String, Long> MAX_SIZE_BY_TYPE = Map.of(
+            "image/jpeg", MAX_IMAGE_SIZE,
+            "image/png", MAX_IMAGE_SIZE,
+            "application/pdf", MAX_DOCUMENT_SIZE
+    );
+
+    private FileValidator() {
+    }
+
+    public static void validateDocumentFile(MultipartFile file) {
         validateFile(file);
 
-        // Check file size for images
-        if (file.getSize() > MAX_IMAGE_SIZE) {
-            throw new InvalidFileException("Image size exceeds the limit of 2MB");
-        }
-
-        // Validate image type
         String contentType = file.getContentType();
-        if (contentType == null || !ALLOWED_IMAGE_TYPES.contains(contentType.toLowerCase())) {
-            throw new InvalidFileException("Invalid image type. Allowed types: JPEG, PNG");
+        String normalizedType = contentType == null ? null : contentType.toLowerCase();
+
+        if (normalizedType == null || !MAX_SIZE_BY_TYPE.containsKey(normalizedType)) {
+            throw new InvalidFileException(
+                    "Invalid file type. Allowed types: JPEG, PNG, PDF"
+            );
         }
 
-
+        long maxAllowedSize = MAX_SIZE_BY_TYPE.get(normalizedType);
+        if (file.getSize() > maxAllowedSize) {
+            String limitLabel = ALLOWED_IMAGE_TYPES.contains(normalizedType) ? "2MB" : "5MB";
+            throw new InvalidFileException("File size exceeds the limit of " + limitLabel);
+        }
     }
 
     private static void validateFile(MultipartFile file) {
